After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787818 - vaapi: regression: Failure of dash in gst-validate
vaapi: regression: Failure of dash in gst-validate
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
unspecified
Other All
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-18 06:41 UTC by Hyunjun Ko
Modified: 2017-09-19 17:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libs: decoder: h264/h265: decode codec data only if opened (1.61 KB, patch)
2017-09-18 06:46 UTC, Hyunjun Ko
committed Details | Review

Description Hyunjun Ko 2017-09-18 06:41:27 UTC
This is regression introduced by commit 2eb2b26a.

Simple reproduced step: 
gst-play-1.0 exMPD_BIP_TC1.mpd

There's g_critical error showing, which leads to a failure of gst-validate.

** (gst-play-1.0:32221): CRITICAL **: gst_h264_sps_copy: assertion 'dst_sps != NULL' failed

Callstack

  • #0 0x00007ffff6c0bde1 in
  • #1 g_logv
  • #2 g_log
  • #3 gst_h264_sps_copy
    at gsth264parser.c line 364
  • #4 gst_h264_parser_parse_sps
    at gsth264parser.c line 1477
  • #5 parse_sps
    at gstvaapidecoder_h264.c line 1767
  • #6 gst_vaapi_decoder_h264_decode_codec_data
    at gstvaapidecoder_h264.c line 4412
  • #7 gst_vaapi_decoder_decode_codec_data
    at gstvaapidecoder.c line 1132
  • #8 gst_vaapi_decoder_update_caps
    at gstvaapidecoder.c line 1197
  • #9 gst_vaapidecode_reset
    at gstvaapidecode.c line 981
  • #10 gst_vaapidecode_set_format
    at gstvaapidecode.c line 1095
  • #11 gst_video_decoder_setcaps
    at gstvideodecoder.c line 701
  • #12 gst_video_decoder_sink_event_default
    at gstvideodecoder.c line 1121

Comment 1 Hyunjun Ko 2017-09-18 06:46:07 UTC
Created attachment 359961 [details] [review]
libs: decoder: h264/h265: decode codec data only if opened

Fixes regression introduced by commit 2eb2b26a.
The case is that decoder tries to decode codec_data even before decoder is opened,
which is priv->parser isn't created yet
Comment 2 Víctor Manuel Jáquez Leal 2017-09-19 17:28:05 UTC
Attachment 359961 [details] pushed as b107520 - libs: decoder: h264/h265: decode codec data only if opened